Use user location in automagic sorting
 - Automagic sorting will now take the user's location in to account and show watchers for the closest cinema within 2 km first, to provide an even more relevant list. A-Z order is used within the closest cinema watcher list and 'status categories' are preserved, just with basically two A-Z lists.
 - Denying location permission when explicitly requested will now show an error snackbar.
 - Centralised reading cinemas JSON file in new (asset) data utility class.
 - Added general option to enable the location permission to settings if day/night theme is set to auto, if permission has not yet been granted: the delegate will use recent location data to improve the time used to determine when to switch between day/night mode.
 - Fix padding on location suggestion cancel button.
 - Fix location suggestion for watchers showing when not editing.
 - Fix crash when location requests are submitted while the queue is processed at the same time.